# solobuild_pipecate

./: .gitignore  excel.csv  excel.md  generate_infographic.py  generate_pdf.js  node_architecture.html
Vobiz-X-Pipecat/: AGENTS.md  Dockerfile  GETTING_STARTED.md  bot.py  pcc-deploy.toml  requirements.txt  server.py
pipecat-prewarm/: README.md  bot.py  main.py  tools.py
pipecat-quickstart/server/: Dockerfile  battery-report.html  bot.py  instructions.py  pcc-deploy.toml  pyproject.toml  realEstateEnglishInstructions.py  server.py  travelEnglishInstructions.py  travelHindiInstructions.py  update.py
pipecat-quickstart/server/english/: Amit_Deccan_Customer Service_sys v1.3.txt  Ananya_Aroozka Secretary.txt  amit.py  meera.py  rohan.py  sneha.py
pipecat-quickstart/server/hindi/: Kabir_Showtime_Events_sys v1.2.txt  Meera_Vihaara Agent.txt  Rohan_Real Estate.txt  Sneha_TechZilla_hiring.txt  amit.py  ananya.py  kabir.py  meera.py  rohan.py  sneha.py  yash.py
pipecat-quickstart/server/test/: Yash_Rentopus.txt  amit.py  anaya.py  kabir.py  meera.py  rohan.py  sneha.py  yash.py
pipecat-quickstart/server/uae/: Amit_Deccan_Customer Service_sys v1.3.txt  Ananya_Aroozka Secretary.txt  Kabir_Showtime_Events_sys v1.2.txt  Meera_Vihaara Agent.txt  Rohan_Real Estate.txt  Sneha_TechZilla_hiring.txt  Yash_Rentopus.txt  amit.py  anaya.py  kabir.py  meera.py  rohan.py  sneha.py  yash.py
pipecatEnglish/: README.md
pipecatEnglish/server/: .env.example  Dockerfile  bot.py  instructions.py  pcc-deploy.toml  pyproject.toml  tools.py
pipecatEnglish/server/evals/: starter_audio.yaml
(+87 files in other folders)
