[project]
name = "pipecat-quickstart"
secret_set = "pipecat-quickstart-secrets"

version = "0.1.0"
description = "Voice AI bot built with Pipecat"
requires-python = ">=3.11"
dependencies = [
    "pipecat-ai[google,runner,webrtc]>=1.4.0",
    "pipecatcloud",
]

[scaling]
  min_agents = 1
  
[dependency-groups]
dev = [
    "pyright>=1.1.404,<2",
    "ruff>=0.12.11,<1",
]

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["I", "UP"]